<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@android:color/white">

    <View
        android:id="@+id/viewCircular"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:foreground="@drawable/foreground_circular_view"
        android:transitionName="@string/img_transition"
        android:background="@drawable/background_circular_view"
        app:layout_constraintBottom_toBottomOf="@id/imgProduct"
        app:layout_constraintEnd_toEndOf="@id/imgProduct"
        app:layout_constraintStart_toStartOf="@id/imgProduct"
        app:layout_constraintTop_toTopOf="@id/imgProduct" />

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:transitionName="@string/name_transition"
        android:text="@string/product_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvInformation"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintTop_toTopOf="@id/imgProduct" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="sajhdqwjkhdkjwahdkjahwdjkhw"
        android:transitionName="@string/info_transition"
        app:layout_constraintBottom_toTopOf="@id/tvPrice"
        app:layout_constraintEnd_toStartOf="@id/imgCart"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:text="20 EGP"
        android:textColor="@android:color/black"
        android:transitionName="@string/price_transition"
        app:layout_constraintBottom_toBottomOf="@id/imgProduct"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvInformation" />

    <!--TODO change the color to yellow-->
    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        style="?attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:isIndicator="true"
        android:progressTint="@android:color/holo_green_light"
        android:rating="3.1"
        android:secondaryProgressTint="@android:color/holo_green_light"
        android:stepSize="0.1"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>